Avoid text wrapping in artifact counter

--- a/ui/totalimpact.css
+++ b/ui/totalimpact.css
@@ -247,7 +247,7 @@ fieldset {
     margin-bottom: 0px
     margin-right:10px;
 	border: 1px solid #EEE;
-	font-size: 120%;
+	font-size: 110%;
 	width: 70%;
 	float: left;
 }
